--- a/02-experiment_tracking/duration-prediction.ipynb
+++ b/02-experiment_tracking/duration-prediction.ipynb
@@ -66,17 +66,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "d87188d1",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025/05/18 15:47:21 INFO mlflow.tracking.fluent: Experiment with name 'nyc-taxi-experiment' does not exist. Creating a new experiment.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -84,7 +77,7 @@
        " 'Networks/MLOPs/mlops-zoomcamp/02-experiment_tracking/mlruns/1'), creation_time=1747579641039, experiment_id='1', last_update_time=1747579641039, lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -98,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "8e013caf",
    "metadata": {},
    "outputs": [],
@@ -118,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "116ff0cc",
    "metadata": {},
    "outputs": [
@@ -128,7 +121,7 @@
        "9.838799799829626"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "b134c97b",
    "metadata": {},
    "outputs": [
@@ -160,7 +153,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Ultracell\\AppData\\Local\\Temp\\ipykernel_54752\\1672306066.py:1: UserWarning: \n",
+      "C:\\Users\\Ultracell\\AppData\\Local\\Temp\\ipykernel_79200\\1672306066.py:1: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -171,7 +164,7 @@
       "https://gist.github.com/mwaskom/de44147ed2974457ad6372750bbe5751\n",
       "\n",
       "  sns.distplot(y_pred, label='prediction')\n",
-      "C:\\Users\\Ultracell\\AppData\\Local\\Temp\\ipykernel_54752\\1672306066.py:2: UserWarning: \n",
+      "C:\\Users\\Ultracell\\AppData\\Local\\Temp\\ipykernel_79200\\1672306066.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -187,10 +180,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x19eb170e4e0>"
+       "<matplotlib.legend.Legend at 0x1bbc41f8110>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -214,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "f9e6479e",
    "metadata": {},
    "outputs": [],
@@ -241,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "8029eba0",
    "metadata": {},
    "outputs": [],
@@ -252,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "f6f2f0eb",
    "metadata": {},
    "outputs": [
@@ -262,7 +255,7 @@
        "(73908, 61921)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "951d51ef",
    "metadata": {},
    "outputs": [],
@@ -284,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "c5cbfc25",
    "metadata": {},
    "outputs": [],
@@ -303,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "1e9fb68b",
    "metadata": {},
    "outputs": [],
@@ -315,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "429e2394",
    "metadata": {},
    "outputs": [
@@ -325,7 +318,7 @@
        "7.758715212021978"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "22bf6f8b",
    "metadata": {},
    "outputs": [],
@@ -352,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "a4999b94",
    "metadata": {},
    "outputs": [
@@ -360,8 +353,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025/05/18 16:05:46 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
-      "2025/05/18 16:06:18 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
+      "2025/05/22 20:23:10 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n",
+      "2025/05/22 20:23:46 WARNING mlflow.models.model: Model logged without a signature and input example. Please set `input_example` parameter when logging the model to auto infer the model signature.\n"
      ]
     }
    ],
@@ -389,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "id": "47b0eb9b",
    "metadata": {},
    "outputs": [],
@@ -399,8 +392,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "9593fb31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location=('file:c:/Users/Ultracell/OneDrive - Ultracell networks '\n",
+       " 'ltd/MLOPs/mlops-zoomcamp/02-experiment_tracking/mlruns/237730765432061467'), creation_time=1747982122410, experiment_id='237730765432061467', last_update_time=1747982122410, lifecycle_stage='active', name='xgboost_optimization', tags={}>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import xgboost as xgb \n",
+    "from hyperopt import fmin, tpe, hp, STATUS_OK, Trials\n",
+    "from hyperopt.pyll import scope\n",
+    "mlflow.set_tracking_uri(\"file:./mlruns\")  # Ensure logging to local directory\n",
+    "mlflow.set_experiment(\"xgboost_optimization\")  # Optional: organize your runs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "adb172b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = xgb.DMatrix(X_train, label=y_train)\n",
+    "valid = xgb.DMatrix(X_val, label=y_val)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "33a5ac15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def objective(params):\n",
+    "    with mlflow.start_run():\n",
+    "        mlflow.set_tag(\"developer\", \"Wafaa\")\n",
+    "        mlflow.set_tag(\"model\", \"xgboost\")\n",
+    "        mlflow.log_params(params)\n",
+    "        booster = xgb.train(\n",
+    "            params = params,\n",
+    "            dtrain = train,\n",
+    "            num_boost_round=1000,\n",
+    "            evals=[(valid, 'validation')],\n",
+    "            early_stopping_rounds=50,\n",
+    "            verbose_eval=False   \n",
+    "        )\n",
+    "        y_pred = booster.predict(valid)\n",
+    "        rmse = root_mean_squared_error(y_val, y_pred)\n",
+    "        mlflow.log_metric(\"rmse\", rmse)\n",
+    "\n",
+    "        mlflow.log_params(params)\n",
+    "\n",
+    "\n",
+    "        return {'loss': rmse, 'status': STATUS_OK}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e65c88b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/10 [00:00<?, ?trial/s, best loss=?]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Ultracell\\anaconda3\\envs\\MLOPs\\Lib\\site-packages\\xgboost\\callback.py:386: UserWarning: [07:36:07] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\objective\\regression_obj.cu:250: reg:linear is now deprecated in favor of reg:squarederror.\n",
+      "  self.starting_round = model.num_boosted_rounds()\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "search_space= {\n",
+    "    'max_depth': scope.int(hp.quniform('max_depth', 4, 100, 1)),\n",
+    "    'learning_rate': hp.uniform('learning_rate', 0.001, 0.3),\n",
+    "    'reg_alpha': hp.uniform('reg_alpha', 0, 10),\n",
+    "    'reg_lambda': hp.uniform('reg_lambda', 0, 10),\n",
+    "    'min_child_weight': scope.int(hp.quniform('min_child_weight', -1, 3, 1)),\n",
+    "    'objective': 'reg:linear',\n",
+    "     'seed': 42,\n",
+    "}\n",
+    "best_result = fmin(\n",
+    "    fn=objective,\n",
+    "    space=search_space,\n",
+    "    algo=tpe.suggest,\n",
+    "    max_evals=10,\n",
+    "    trials=Trials()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c54c3d0e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9fe11906",
    "metadata": {},
    "outputs": [],
    "source": []
